# learngit

./: readme.txt.txt
control_algo/: CMakeLists.txt  package.xml
control_algo/common/: LogAnalyzer.py  common.h  defines.h  log.h
control_algo/common/acc_params/: acc_params.cpp  acc_params.h
control_algo/common/ego_state/: ego_state.cpp  ego_state.h
control_algo/common/mathtool/: math_utils.cpp  math_utils.h
control_algo/common/vehicle_params/: vehicle_params.cpp  vehicle_params.h
control_algo/conf/: params.yaml  params_bj.yaml  params_bj_hil.yaml  params_sz.yaml
control_algo/controller/EPSAngle2Torque_PID/: eps_pid.cpp  eps_pid.h
control_algo/controller/lqr_acc/: lqr_acc.cpp  lqr_acc.h
control_algo/controller/purepursuit/: purepursuit.cpp  purepursuit.h
control_algo/controller/stanley/: stanley_controller.cpp  stanley_controller.h
control_algo/include/: control_algo.h
control_algo/interface/: control_tt.cc
control_algo/src/: control_algo.cc
