<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_algo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fanshengli@china-icv.cn">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rclcpp</depend>
  <depend>ados_localization_msgs</depend>
  <depend>sys_ctrl_hmi_msgs</depend>
  
  <depend>protobuf_utils</depend>
  <depend>Eigen3</depend>
  <depend>ament_cmake</depend> -->

  <depend>x_buf_api</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
